# verbatim

./: .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .pylintrc  AGENTS.md  BUILD.md  Dockerfile  LICENSE  Makefile  README.md  config.sample.yaml  config.yaml  data.json  docker-build.sh  docker-run.sh  justfile  pyproject.toml  pytest.ini  requirements-all.txt  requirements-gpu.txt  requirements.txt  run.py  setup.py
.github/workflows/: bandit.yml  ci.yml  coverage.yml  docker-publish.yml  flake8.yml  lint-security.yml  pylint.yml  pyright.yml  python-package.yml  python-publish.yml  ruff.yml  tests.yml
audio/: 2ch-acoustic_2spk_de_BeltzPsychodynamik_00h05m28s.ref.json  2ch-acoustic_2spk_de_BeltzSchwierigeSituation_1_00h02m06s.m4a  2ch-acoustic_2spk_de_BeltzSchwierigeSituation_2_00h02m24s.m4a  2ch-acoustic_2spk_de_BeltzSchwierigeSituation_3_00h02m24s.m4a  2ch-distinct_2spk_de_AusschnittTherapieDJIMic2.m4a  2ch-identical_2spk_de_AusschnittTherapieYVC1000_00h00m31s.m4a  2ch-identical_3spk_de_AusschnittTherapieYVC1000_00h00m31s.m4a  README.md  channel_analysis.py
benchmarks/switchlingua/: Makefile  README.md  benchmark.yaml  requirements.txt  systems.yaml
deploy/: Dockerfile.cpu  Dockerfile.gpu
doc/: airfrance-comparison.md  architecture.md  architecture.plantuml  diarization_policy.md  verbatim-cli.md
docs/: architecture.md  conf.py  index.md  installation.md
docs/api/: modules.rst  verbatim.audio.audio.rst  verbatim.audio.convert.rst  verbatim.audio.rst  verbatim.audio.sources.audiosource.rst  verbatim.audio.sources.factory.rst  verbatim.audio.sources.ffmpegfileaudiosource.rst  verbatim.audio.sources.fileaudiosource.rst  verbatim.audio.sources.micaudiosource.rst  verbatim.audio.sources.pcmaudiosource.rst  verbatim.audio.sources.rst  verbatim.audio.sources.sourceconfig.rst  verbatim.audio.sources.wavsink.rst  verbatim.config.rst  verbatim.env.rst  verbatim.eval.compare.rst  verbatim.eval.find.rst  verbatim.eval.rst  verbatim.log.rst  verbatim.main.rst  verbatim.models.rst  verbatim.rst  verbatim.transcript.format.ass.rst  verbatim.transcript.format.docx.rst  verbatim.transcript.format.factory.rst  verbatim.transcript.format.json.rst  verbatim.transcript.format.md.rst  verbatim.transcript.format.multi.rst  verbatim.transcript.format.rst  verbatim.transcript.format.stdout.rst  verbatim.transcript.format.txt.rst  verbatim.transcript.format.writer.rst  verbatim.transcript.formatting.rst  verbatim.transcript.idprovider.rst  verbatim.transcript.rst  verbatim.transcript.sentences.rst  verbatim.transcript.transcript.rst  verbatim.transcript.words.rst  verbatim.verbatim.rst  verbatim.voices.diarization.rst  (+14 more)
docs/usage/: cli.md  index.md  python_api.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1877d43d7824d17b_cli_py.html  z_1877d43d7824d17b_metrics_py.html  z_1877d43d7824d17b_utils_py.html  z_1fa4676e7b6648ff_audiosource_py.html  z_1fa4676e7b6648ff_factory_py.html  z_1fa4676e7b6648ff_ffmpegfileaudiosource_py.html  z_1fa4676e7b6648ff_fileaudiosource_py.html  z_1fa4676e7b6648ff_micaudiosource_py.html  z_1fa4676e7b6648ff_pcmaudiosource_py.html  z_1fa4676e7b6648ff_sourceconfig_py.html  z_1fa4676e7b6648ff_wavsink_py.html  z_2171bbf4faccdaf1_formatting_py.html  z_2171bbf4faccdaf1_idprovider_py.html  z_2171bbf4faccdaf1_sentences_py.html  z_2171bbf4faccdaf1_transcript_py.html  z_2171bbf4faccdaf1_words_py.html  z_26002dd77c8cfe93___init___py.html  z_26002dd77c8cfe93_config_py.html  z_26002dd77c8cfe93_main_py.html  z_26002dd77c8cfe93_models_py.html  z_26002dd77c8cfe93_verbatim_py.html  z_92074ebaf5fcfef3_audio_py.html  z_9e53221b67426ad0_base_py.html  z_9e53221b67426ad0_factory_py.html  z_9e53221b67426ad0_pyannote_py.html  z_9e53221b67426ad0_stereo_py.html  z_d1b0a7bcbde2f0c9_faster_whisper_py.html  z_d1b0a7bcbde2f0c9_transcribe_py.html  z_d1b0a7bcbde2f0c9_whisper_py.html  z_d1b0a7bcbde2f0c9_whispercpp_py.html  z_d1b0a7bcbde2f0c9_whispermlx_py.html  z_db6ad7e52d72dce7_ass_py.html  z_db6ad7e52d72dce7_docx_py.html  z_db6ad7e52d72dce7_json_dlm_py.html  z_db6ad7e52d72dce7_json_py.html  z_db6ad7e52d72dce7_md_py.html  (+8 more)
samples/: Airfrance - Bienvenue à bord.json  Airfrance - Bienvenue à bord.ref.json  Kennedy - Ich bin ein Berliner.json  Kyoto - Train announcement.json  README.md
testdata/: example_data.json
tests/: conftest.py  test_audio.py  test_audio_settings.py  test_batch_match.py  test_config_file_legacy.py  test_core_language.py  test_dss_password_config.py  test_env_config.py  test_eval_compare.py  test_eval_metrics.py  test_eval_utils.py  test_install_prefetch.py  test_merged_non_speech_markers.py  test_models.py  test_non_speech.py  test_offline_model_loading.py  test_pipeline.py  test_rttm.py  test_sentences.py  test_server.py  test_stereo_diarization.py  test_transcript_json.py  test_transcript_markers.py  test_window.py
tests/audio/: test_audio.py  test_audio_settings.py  test_dss_convert.py
tests/data/: init.ref.json  init.utt.ref.json  metrics.json
tests/diarizationlm/: metrics_test.py  utils_test.py
tests/diarize/: test_diarize_policy.py  test_diarize_policy_params.py  test_pyannote_output_selection.py  test_senko_diarize.py  (+5 more)
verbatim/: __init__.py  __main__.py  cache.py  config.py  context.py  engine.py  env.py  filter.py  language_id.py  languages.py  log.py  logging_utils.py  main.py  model_cache.py  models.py  non_speech.py  pipeline.py  prefetch.py  processor.py  server.py  status_hook.py  status_types.py  transcription.py  verbatim.py
verbatim_audio/: audio.py  convert.py
verbatim_batch/: __init__.py  __main__.py  main.py
verbatim_cli/: __init__.py  args.py  config_file.py  configure.py  env.py  main.py  run_single.py
verbatim_core/: language.py
verbatim_diarization/: __init__.py  diarization.py  policy.py  prefetch.py  pyannote_annotations.py  utils.py
verbatim_diarize/: __init__.py
verbatim_files/: __init__.py  formatting.py  rttm.py  vttm.py
verbatim_rttm/: __init__.py  vttm.py
verbatim_serve/: __init__.py  main.py  server.py
verbatim_transcript/: __init__.py  interfaces.py  language.py
(+185 files in other folders)
