[project]
name = "verbatim"
version = "1.0.2"
description = "high quality multi-lingual speech to text"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "audio-separator>=0.18.0",
    "av>=14.0.1",
    "colorama>=0.4.6",
    "dataclasses-json>=0.6.7",
    "demucs>=4.0.1",
    "faster-whisper>=1.1.1",
    "langcodes>=3.5.0",
    "numpy>=2.0.2",
    "onnxruntime>=1.20.1",
    "openai-whisper>=20240930",
    "pyannote-audio[separation]>=3.3.2",
    "pyannote-core>=5.0.0",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "python-docx>=1.1.2",
    "silero-vad>=5.1.2",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.0",
    "speechbrain>=1.0.2",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "wheel>=0.45.1",
    "wtpsplit>=2.1.2",
]

[project.scripts]
verbatim = "verbatim.cli:main"

[project.optional-dependencies]
cuda_gpu = ["onnxruntime-gpu>=1.16.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.8.6"]

[tool.pyright]
venvPath = "."
venv = ".venv"
